<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="cue"
            type="com.example.android.sparkstories.model.cue.Cue" />

        <variable
            name="viewmodel"
            type="com.example.android.sparkstories.ui.stories.NewStoryViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/new_story_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.cues.NewCueFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/new_story_top_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:paddingStart="@dimen/padding_regular"
                android:paddingLeft="@dimen/padding_regular"
                android:paddingEnd="@dimen/padding_regular"
                android:paddingRight="@dimen/padding_regular">

                <ImageButton
                    android:id="@+id/new_story_info_button"
                    style="@style/Theme.WriteItSayItHearIt.TopMenuItem"
                    android:stateListAnimator="@animator/top_menu_button_state"
                    android:backgroundTint="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewmodel.onClickInfo()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_help_outline_black_24dp" />

                <ImageButton
                    android:id="@+id/view_cue_button"
                    style="@style/Theme.WriteItSayItHearIt.TopMenuItem"
                    android:stateListAnimator="@animator/top_menu_button_state"
                    android:backgroundTint="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:onClick="@{() -> viewmodel.onShowCueClick()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/new_story_info_button"
                    app:layout_constraintStart_toEndOf="@id/new_story_info_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_action_cues_black_24dp" />

                <ImageButton
                    android:id="@+id/toggle_preview_button"
                    style="@style/Theme.WriteItSayItHearIt.TopMenuItem"
                    android:stateListAnimator="@animator/top_menu_activated_button_state"
                    android:backgroundTint="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:onClick="@{() -> viewmodel.onTogglePreviewMode()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/view_cue_button"
                    app:layout_constraintStart_toEndOf="@id/view_cue_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_pageview_black_24dp" />

                <ImageButton
                    android:id="@+id/submit_story_button"
                    style="@style/Theme.WriteItSayItHearIt.TopMenuItem"
                    android:stateListAnimator="@animator/top_menu_button_state"
                    android:backgroundTint="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"
                    android:onClick="@{() -> viewmodel.onClickSubmit()}"
                    app:layout_constraintEnd_toStartOf="@id/character_count_text_view"
                    app:layout_constraintRight_toLeftOf="@id/character_count_text_view"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_done_black_24dp" />

                <TextView
                    android:id="@+id/character_count_text_view"
                    style="@style/Theme.WriteItSayItHearIt.TopMenuItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/top_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="new_story_top_menu" />


            <ScrollView
                android:id="@+id/new_story_text_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fillViewport="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top_barrier">

                <com.example.android.sparkstories.views.ScaleTextInputEditText
                    style="@style/Theme.WriteItSayItHearIt.CardText"
                    android:id="@+id/new_story_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:padding="@dimen/padding_small"
                    android:background="@null"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:text="@={viewmodel.storyTextField.text}"
                    app:addOnTextChangeListener="@{viewmodel.storyTextChangeListener()}"
                    app:onDoubleClickListener="@{viewmodel.toggleTopMenuDoubleClickListener()}" />
            </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

