<resources>
    <string name="app_name">Spark Stories</string>

    <string name="new_cue_info_text">Create a new cue to add to the community cue pool! \n\n Cues are meant to get the brain juices flowing! They offer a starting point for writers. \n\n They should be short and concise!</string>
    <string name="new_story_info_text">Create a new story to add to the community! \n\n Stories shouldn\'t be too long. Try to keep them short and focused. The idea is to practice a little everyday!  \n\n Stories will be available to be narrated by the community!</string>
    <string name="cue_text">Cue Text</string>
    <string name="submit_btn_text">Submit</string>

    <string name="invalid_new_cue_snackbar">Cues must be between %1$d and %2$d characters.</string>
    <string name="invalid_new_story_snackbar">Stories must be between %1$d and %2$d characters.</string>
    <string name="invalid_new_comment_snackbar">Comments must be at least %1$d characters.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cues">Cues</string>
    <string name="stories">Stories</string>
    <string name="narrations">Narrations</string>
    <string name="story_text">Story Text</string>
    <string name="filter_cues">Filter Cues</string>
    <string name="filter_stories">Filter Stories</string>
    <string name="no_results">No results.</string>
    <string name="create_a_new_story">Create a New Story!</string>
    <string name="confirm_submission_dialog_title">Ready to submit?</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <string name="cue_lorem_ipsum"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum lorem diam, finibus egestas accumsan in, posuere eget mi. Praesent convallis elit vel metus interdum mattis. Nulla ac quam consequat, sodales mi et, faucibus sapien. Mauris sed felis ac nulla fermentum.
    </string>

    <string name="story_lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras dictum scelerisque ex eu convallis. Nunc tincidunt non eros sit amet condimentum. Vestibulum in vulputate arcu, eu sagittis purus. Vivamus luctus vulputate dolor sit amet sagittis. Maecenas ac sapien libero. Proin iaculis vulputate felis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla vulputate viverra pellentesque.

Proin in diam odio. Aliquam mattis elit sed consequat imperdiet. Nunc ac risus leo. Aenean scelerisque placerat odio, at placerat mi. Morbi et sollicitudin nunc, vel fermentum velit. Nullam sapien dui, tempus et molestie sed, fringilla ut leo. Nam diam mi, ultrices non vestibulum quis, maximus vel mi. Vivamus dui turpis, varius ac venenatis commodo, rutrum in tellus. Nunc vehicula justo in quam consequat, eu eleifend felis pulvinar. Mauris aliquet faucibus viverra. Pellentesque rutrum velit mauris, nec laoreet sem porttitor ac. Morbi metus ligula, fermentum sed est quis, auctor blandit turpis. Curabitur tempus tellus ac imperdiet fermentum. Sed massa velit, commodo sit amet maximus volutpat, sagittis eu quam. Quisque nisi tellus, fringilla sodales maximus eget, gravida eget ex.

Etiam tincidunt id diam vel feugiat. Aenean mattis est justo, sed sodales justo ullamcorper sodales. Integer pulvinar erat a dui feugiat, ac aliquam nunc porta. Nulla eleifend justo nec ex molestie, vel malesuada risus condimentum. Suspendisse nec felis eleifend, pulvinar orci sed, iaculis augue. In faucibus fermentum dignissim. Mauris at suscipit tellus, vitae eleifend felis. Aliquam erat volutpat. Etiam quis cursus velit, quis fringilla nisl. Duis porttitor rhoncus tempor. In bibendum lectus ac ipsum aliquam faucibus. Fusce ornare fringilla lectus, sit amet blandit massa ultricies eget. Curabitur aliquam elementum risus a rhoncus. Nam a purus nisl.

Vestibulum efficitur nisi ultricies, bibendum erat at, varius lectus. Nullam in posuere eros. Integer nec turpis vel eros feugiat hendrerit in euismod velit. Mauris enim sapien, ultrices et vulputate eget, semper eget nunc. Curabitur ac velit in erat vulputate dictum vel quis ex. Pellentesque auctor leo nec posuere iaculis. Sed eu consectetur lorem. Nullam venenatis magna vel purus imperdiet euismod. Nam in porttitor est, eget porttitor ligula. Maecenas porta magna vel est egestas, non sollicitudin quam elementum. Nunc non sem eget libero tincidunt auctor vitae et erat.

Aenean a erat at lectus tempor accumsan non ut neque. Aenean pellentesque sem eu condimentum venenatis. Phasellus vestibulum dolor mi, sit amet iaculis mauris feugiat sit amet. Nulla ex nulla, accumsan sit amet nunc vitae, gravida tristique sapien. Phasellus in tristique diam. Vivamus vitae sem mattis, bibendum enim sit amet, ultrices magna. Fusce hendrerit vel nibh in venenatis.

Vivamus commodo molestie sodales. Cras eget augue purus. Ut sed felis nec tortor tempor finibus. In bibendum tortor id urna dignissim consectetur. Nullam vel maximus ex. Aliquam non euismod eros, sed sodales metus. Praesent pharetra volutpat imperdiet. Pellentesque auctor orci at lacus maximus, id finibus lectus dignissim. Integer vulputate ac sem in dignissim. Phasellus lobortis sodales arcu. Etiam sit amet elementum augue. Pellentesque id magna a massa egestas aliquam in vel urna.

Curabitur semper, libero ut varius maximus, sem mi tincidunt metus, ac faucibus leo ex a elit. Aenean mattis quis arcu ut tincidunt. Phasellus venenatis dignissim molestie. Praesent lacinia non augue ac iaculis. Pellentesque tempor vel ipsum vel suscipit. Vivamus metus elit, pulvinar at rhoncus faucibus, commodo eu ligula. Donec lacinia purus ut purus ornare, et lacinia sapien gravida. Suspendisse dapibus quis lectus non semper. Vestibulum est ex, congue non dolor at, sollicitudin faucibus urna. In non augue urna. Mauris imperdiet in ipsum id luctus. Nam nec tincidunt urna. Ut ultrices egestas est. Cras dignissim porttitor turpis, ut pretium dolor semper a.

Ut ac interdum lacus. In odio sapien, tincidunt sit amet nisi ac, elementum dapibus velit. Donec facilisis erat metus, ut auctor eros ullamcorper ut. Ut vitae orci fringilla, accumsan odio vel, finibus nisl. Integer tincidunt enim erat, at luctus turpis cursus tristique. Sed nisi quam, dignissim vitae sodales ut, sodales quis quam. Duis ornare eleifend nulla, nec volutpat dui tristique eu. Donec lacinia feugiat scelerisque. Donec gravida odio ut ex blandit, a tempus eros tincidunt. Proin imperdiet non odio sit amet tempor.

Proin quis tempor sem, a tempor lorem. Phasellus tincidunt euismod ex, ut auctor diam porta ut. Aliquam erat volutpat. Nunc eget elementum enim. Maecenas a aliquam felis. Maecenas rhoncus ac justo quis tincidunt. Donec ac dapibus ex. Phasellus vel arcu nibh. Ut eu eleifend lectus. Vivamus condimentum gravida massa, eget rhoncus metus interdum vitae. Suspendisse rhoncus id odio in cursus.

Proin nec condimentum quam. Ut egestas vehicula rhoncus. Fusce vitae odio suscipit, pretium diam sed, faucibus leo. Pellentesque commodo consectetur ligula, viverra rhoncus lorem. Aenean eget purus eget dui vehicula hendrerit dignissim ac justo. Sed consectetur mi at est aliquet, et ornare velit volutpat. Nam ut dui vitae arcu sodales venenatis. In commodo dui quis imperdiet interdum. Nunc sed bibendum dui. Suspendisse dignissim eros vitae nisl porta vehicula. Fusce tempus dictum metus, sit amet elementum elit facilisis eget. Etiam elit turpis, congue sit amet libero sit amet, posuere fringilla augue. Etiam sapien augue, molestie non vehicula sed, mattis vel dolor. Ut eu enim sed elit interdum sagittis facilisis ac urna.

Nulla rutrum convallis sem tincidunt rhoncus. Ut id mi et felis imperdiet fermentum. Nulla sagittis cursus lacus quis eleifend. Proin vel odio augue. Donec malesuada dolor mauris, id aliquet nisi euismod nec. Nam et dignissim enim. Aenean elementum placerat semper. In pellentesque vestibulum orci, at aliquam justo facilisis a. Curabitur ac condimentum lacus. Duis interdum, diam non auctor dignissim, est odio pulvinar massa, nec feugiat erat urna a lectus. Nulla ut facilisis sem. Proin ac iaculis magna.

Morbi euismod lectus nec condimentum tristique. Nam quis orci erat. Nunc tincidunt augue eget tortor efficitur, ut maximus magna interdum. Pellentesque vitae vestibulum ipsum, eget fringilla metus. Praesent ornare viverra finibus. Phasellus convallis massa id metus fermentum porta. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus ultricies, leo et consequat posuere, diam odio vulputate tortor, vel aliquet dolor enim at nisi.
    </string>

    <string name="preference_author">PREFERENCE_USER</string>
    <string name="new_story">New Story</string>
    <string name="stories_created_from_this_cue">Stories created from this cue:</string>
    <string name="new_comment">New Comment</string>
    <string name="settings">Settings</string>

    <string name="log_out_key">log_out_key</string>
    <string name="change_screen_name_key">change_screen_name_key</string>
    <string name="screen_name">Screen Name</string>
    <string name="internet_unavailable">Unable to connect to internet.</string>

    <string name="unknown_network_error">An unknown network error has occurred.</string>
    <string name="name_unavailable">This name is unavailable</string>
    <string name="screen_name_cannot_be_blank">Screen name cannot be blank!</string>
    <string name="Account">Account</string>
    <string name="log_out">Log out</string>
    <string name="change_screen_name">Change screen name</string>
    <string-array name="sort_order">
        <item>New</item>
        <item>Top</item>
        <item>Hot</item>
    </string-array>

</resources>
