<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/cuesFragment"
        android:icon="@drawable/ic_action_cues_black_24dp"
        android:title="@string/cues" />

    <item
        android:id="@+id/storiesFragment"
        android:icon="@drawable/ic_stories_black_24dp"
...
