...
            app:layout_constraintBottom_toTopOf="@id/barrier"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scroll_view" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/new_story_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewmodel.onNewStoryButtonClick()}"
            android:text="@string/new_story"
            app:layout_constraintBottom_toTopOf="@id/barrier"
            app:layout_constraintEnd_toEndOf="parent"
...
